fix: text alignmnent

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -516,7 +516,7 @@ hr {
   margin-bottom: 2rem;
   text-align: center;
 }
-.gallery-container p {
+.subheader {
   margin-bottom: 2rem;
   text-align: center;
 }
